[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://ship_64.png" type="Texture" id=3]
[ext_resource path="res://laser-shot-silenced.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 27.9826, 31.8103 )

[node name="Player" type="Node2D" groups=[
"Player",
]]

position = Vector2( 0.0944672, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="." index="0"]

input_pickable = false
collision_layer = 8
collision_mask = 33
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "collision" ]
speed = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D" index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D" index="1"]

texture = ExtResource( 3 )

[node name="Gun_Left" type="Node2D" parent="KinematicBody2D" index="2"]

position = Vector2( -25, 1 )
scale = Vector2( 0.0118085, 0.0236171 )
_sections_unfolded = [ "Transform" ]

[node name="Gun_Right" type="Node2D" parent="KinematicBody2D" index="3"]

position = Vector2( 25, 1 )
scale = Vector2( 0.0118085, 0.0236171 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 0
wait_time = 0.7
one_shot = false
autostart = false

[node name="BulletSound" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = -8.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


